--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="/main.css"></head><body><h1>harp</h1><p>testing</p></body></html>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="/main.css"></head><body><h1>Tools shape the proces</h1><p>But do they do so in a good way? In this article I will be looking at tools and how they shape your way of working and the result.</p></body></html>
